# ElteCar_Visualizer

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/: cartesians.h  lidar_data.h  main_window.h
include/general/OpenGL_SDL/: basic_window.h  element_buffer_object.h  shader_program.h  vertex_array_object.h  vertex_buffer_object.h
include/general/SharedMemory/: bufferd_reader.h  info.h  threaded_multi_reader_handler.h
src/: main.cpp  main_window.cpp
src/general/OpenGL_SDL/: SDL_GLDebugMessageCallback.cpp  basic_window.cpp  element_buffer_object.cpp  file_handling.cpp  generic_structs.cpp  shader_program.cpp  vertex_array_object.cpp  vertex_buffer_object.cpp
src/general/SharedMemory/: bufferd_reader.cpp
